# claude-repath

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  demo.tape  pyproject.toml  setup-demo.sh
.claude/: ralph-loop.local.md
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: release.md
.github/workflows/: ci.yml  publish.yml
skills/claude-repath/: SKILL.md
src/claude_repath/: __init__.py  backup.py  cli.py  encoder.py  env_warn.py  locks.py  migrate.py  platform_paths.py  tui.py  utils.py
src/claude_repath/layers/: __init__.py  base.py  global_json.py  jsonl_cwd.py  projects_dir.py  worktrees_json.py
tests/: test_backup.py  test_cli.py  test_encoder.py  test_env_warn.py  test_global_json.py  test_jsonl_cwd.py  test_locks.py  test_migrate.py  test_platform_paths.py  test_projects_dir.py  test_tui.py  test_utils.py  test_worktrees_json.py
